--- a/Support/templates/index.html
+++ b/Support/templates/index.html
@@ -13,7 +13,7 @@
 <body>
      <div class="container mt-5 back">
         <div class="row border border-warning justify-content-center" style="background-color: antiquewhite;">
-            <h1 class="text-center text-success">Welcome To ZOOHO Ticket </h1>
+            <h1 class="text-center text-success">Welcome To ZOHO Ticket </h1>
         </div>
         <div class="row border border-secondry mt-2 token">
             <div class="col-sm-11">
@@ -24,19 +24,19 @@
                     {% endfor %}
                 </ul>
                 {% endif %}
-            <h3 class="mt-4 ml-4">Submit a ticket</h3>
+            <h3 class="mt-4 ml-4">My Tokens</h3>
             <h5 class="mt-4 ml-4">Ticket Information</h5>
-            <form action="" method="POST">
+            <form action="tokens/" method="POST">
                 {% csrf_token %}
                 <div class="col-sm-7 ml-4">
                     <label class="mt-2">Department</label><span><sup class="star">*</sup> </span>
-                    <select class="form-control" name="department">PWSLab DevOps Support
+                    <select class="form-control" name="Department">PWSLab DevOps Support
                         <option value="PWSLab DevOps Support">PWSLab DevOps Support</option>
                         <option value="i support">i support</option>
                     </select>
                     <label class="mt-2">Category</label><span><sup class="star">*</sup> </span>
-                    <select class="form-control" name="department">-None-
-                        <option value="-None-">-None-</option>
+                    <select class="form-control" name="Category">-None- 
+                        <option value="">-None-</option>
                         <option value="NEW Project CI/CD Pipeline Setup">NEW Project CI/CD Pipeline Setup</option>
                         <option value="Update CI/CD Pipeline Configuration">Update CI/CD Pipeline Configuration</option>
                         <option value="DevSecOps Pipeline Setup">DevSecOps Pipeline Setup</option>
@@ -52,25 +52,26 @@
                     <span class="d-inline-block" data-toggle="tooltip" title="Enter your project URL like https://company.pwslab.net/johndoe/my-project/">
                     <label class="mt-3">PWSLab Project URL &#9432;</label><span><sup class="star">*</sup> </span>
                     </span>
-                    <input type="url" class="form-control"name="url">
+                    <input type="url" id="project_URL" class="form-control" name="PWSLab_Project_URL">
                     <label class="mt-3">Subject</label><span><sup class="star">*</sup> </span>
-                    <input type="text" class="form-control"name="subject">
+                    <input type="text"id="subject" class="form-control" name="Subject" maxlength="150">
                     <label class="mt-3">Description</label><span><sup class="star">*</sup> </span>
-                    <textarea name="subject" id="subject" class="form-control " cols="30" rows="10"></textarea>
+                    <textarea name="Description" id="description" class="form-control " cols="30" rows="10"></textarea>
                     <h5 class="mt-4">Contact Details</h5>
                         <label class="mt-3">Contact Name</label><span><sup class="star">*</sup> </span>
-                        <input type="text" class="form-control" name="name" value="{{request.session.username|capfirst}}" disabled>
+                        <input type="text" class="form-control" name="Contact_Name" value="{{request.session.username|capfirst}}" readonly="true">
                         <label class="mt-3">Email</label><span><sup class="star">*</sup> </span>
-                        <input type="text" class="form-control" name="email" value="{{request.session.email}}" disabled>
+                        <input type="text" class="form-control" name="Email" value="{{request.session.email}}" readonly="true">
                     <h5 class="mt-4">Additional Information</h5>
                      <label class="mt-2">Priority</label><span><sup class="star">*</sup> </span>
-                    <select class="form-control" name="department">-None-
-                        <option value="-None-">-None-</option>
+                    <select class="form-control" id="priority" name="Priority">-None-
+                        <option value="">-None-</option>
                         <option value="High - Production System Down">High - Production System Down</option>
                         <option value="Medium - System Impaired">Medium - System Impaired</option>
+                        <option value="Low - General Guidance">Low - General Guidance</option>
                     </select>
-                    <button type="submit" class="btn btn-info btn-sm mt-3">submit</button>
-                    <span class="ml-1"><button type="submit" class="btn btn-light btn-sm mt-3">Discard</button></span>
+                    <input type="submit" class="btn btn-info btn-sm mt-3" value="Submit"></input>
+                    <span class="ml-1"><input type="submit" class="btn btn-light btn-sm mt-3" value="Discard"></input></span>
                 </div>
                 <div class="col-sm-3">
                 </div>
