--- a/Support/templates/index.html
+++ b/Support/templates/index.html
@@ -73,7 +73,7 @@
                         <option value="Low - General Guidance">Low - General Guidance</option>
                     </select>
                     <input type="submit" class="btn btn-info btn-sm mt-3" value="Submit"></input>
-                    <span class="ml-1"><input type="submit" class="btn btn-light btn-sm mt-3" value="Discard"></input></span>
+                    <span class="ml-1"><input type="button" class="btn btn-light btn-sm mt-3" value="Discard"></input></span>
                 </div>
                 <div class="col-sm-3">
                 </div>
