--- a/Support/templates/token_details.html
+++ b/Support/templates/token_details.html
@@ -32,6 +32,7 @@
                     <div class="row">
                         <div class="col-sm-10">
                         <h4 class="mt-1"><a href="/token-details/{{token.ticketNumber}}_{{token.id}}">{{token.subject}}</a></h4>
+                        <h5 class="mt-1" style="">{{token.createdTime}}</h5>
                         </div>
                         <div class="col-sm-2">
                             <h5 class="mt-1" style="">#{{token.ticketNumber}}</h5>
